@@ -1,15 +1,22 @@
 package com.twitter.io
 
-import java.io.InputStream
-
 import com.twitter.concurrent.AsyncMutex
 import com.twitter.util.{Closable, CloseAwaitably, Future, FuturePool, Time}
+import java.io.InputStream
 
 /**
- * Provides the Reader API for an InputStream
+ * Provides the [[Reader]] API for an `InputStream`.
+ *
+ * The given `InputStream` will be closed when [[Reader.read]]
+ * reaches the EOF or a call to [[discard()]] or [[close()]].
  */
-class InputStreamReader private[io] (inputStream: InputStream, maxBufferSize: Int, pool: FuturePool)
-    extends Reader with Closable with CloseAwaitably {
+class InputStreamReader private[io] (
+    inputStream: InputStream,
+    maxBufferSize: Int,
+    pool: FuturePool)
+  extends Reader
+  with Closable
+  with CloseAwaitably {
   private[this] val mutex = new AsyncMutex()
   @volatile private[this] var discarded = false
 
@@ -18,9 +25,11 @@ class InputStreamReader private[io] (inputStream: InputStream, maxBufferSize: In
 
   /**
    * Asynchronously read at most min(`n`, `maxBufferSize`) bytes from
-   * the InputStream. The returned future represents the results of
+   * the `InputStream`. The returned [[Future]] represents the results of
    * the read operation.  Any failure indicates an error; an empty buffer
    * indicates that the stream has completed.
+   *
+   * @note the underlying `InputStream` is closed on read of EOF.
    */
   def read(n: Int): Future[Option[Buf]] = {
     if (discarded)
@@ -28,23 +37,25 @@ class InputStreamReader private[io] (inputStream: InputStream, maxBufferSize: In
     if (n == 0)
       return Future.value(Some(Buf.Empty))
 
-    mutex.acquire() flatMap { permit =>
+    mutex.acquire().flatMap { permit =>
       pool {
         try {
           if (discarded)
             throw new Reader.ReaderDiscarded()
-          val size = n min maxBufferSize
+          val size = math.min(n, maxBufferSize)
           val buffer = new Array[Byte](size)
           val c = inputStream.read(buffer, 0, size)
-          if (c == -1)
+          if (c == -1) {
+            pool { inputStream.close() }
             None
-          else
+          } else {
             Some(Buf.ByteArray.Owned(buffer, 0, c))
+          }
         } catch { case exc: InterruptedException =>
-            discarded = true
-            throw exc
+          discard()
+          throw exc
         }
-      } ensure {
+      }.ensure {
         permit.release()
       }
     }
@@ -52,20 +63,33 @@ class InputStreamReader private[io] (inputStream: InputStream, maxBufferSize: In
 
   /**
    * Discard this reader: its output is no longer required.
+   *
+   * This closes the underlying `InputStream`.
    */
-  def discard() { discarded = true }
+  def discard(): Unit =
+    close()
 
   /**
-   * Discards this Reader and closes the underlying InputStream
+   * Discards this [[Reader]] and closes the underlying `InputStream`
    */
-  def close(deadline: Time) = closeAwaitably {
-    discard()
+  def close(deadline: Time): Future[Unit] = closeAwaitably {
+    discarded = true
     pool { inputStream.close() }
   }
 }
 
 object InputStreamReader {
-  val DefaultMaxBufferSize = 4096
-  def apply(inputStream: InputStream, maxBufferSize: Int = DefaultMaxBufferSize) =
+  val DefaultMaxBufferSize: Int = 4096
+
+  /**
+   * Create an [[InputStreamReader]] from the given `InputStream`
+   * using [[FuturePool.interruptibleUnboundedPool]] for executing
+   * all I/O.
+   */
+  def apply(
+    inputStream: InputStream,
+    maxBufferSize: Int = DefaultMaxBufferSize
+  ): InputStreamReader =
     new InputStreamReader(inputStream, maxBufferSize)
+
 }
