@@ -1,12 +1,12 @@
 package com.twitter.io
 
+import com.twitter.conversions.time._
+import com.twitter.util.{Await, FuturePool}
 import java.io.ByteArrayInputStream
-
 import org.junit.runner.RunWith
+import org.mockito.Mockito._
 import org.scalatest.FunSuite
 import org.scalatest.junit.JUnitRunner
-
-import com.twitter.util.Await
 
 @RunWith(classOf[JUnitRunner])
 class InputStreamReaderTest extends FunSuite {
@@ -19,7 +19,7 @@ class InputStreamReaderTest extends FunSuite {
     val r = new InputStreamReader(s, 4096)
 
     val f = r.read(10)
-    assert(Await.result(f).isEmpty)
+    assert(Await.result(f, 5.seconds).isEmpty)
   }
 
   test("InputStreamReader - read 0 bytes") {
@@ -28,7 +28,7 @@ class InputStreamReaderTest extends FunSuite {
     val r = new InputStreamReader(s, 4096)
 
     val f1 = r.read(0)
-    assert(Await.result(f1).get.isEmpty)
+    assert(Await.result(f1, 5.seconds).get.isEmpty)
   }
 
   test("InputStreamReader - read positive bytes") {
@@ -37,13 +37,13 @@ class InputStreamReaderTest extends FunSuite {
     val r = new InputStreamReader(s, 4096)
 
     val f1 = r.read(10)
-    assert(Await.result(f1) == Some(buf(0,10)))
+    assert(Await.result(f1, 5.seconds) == Some(buf(0,10)))
 
     val f2 = r.read(10)
-    assert(Await.result(f2) == Some(buf(10,20)))
+    assert(Await.result(f2, 5.seconds) == Some(buf(10,20)))
 
     val f3 = r.read(10)
-    assert(Await.result(f3) == Some(buf(20,25)))
+    assert(Await.result(f3, 5.seconds) == Some(buf(20,25)))
 
     val f4 = r.read(10)
     assert(Await.result(f4).isEmpty)
@@ -55,16 +55,16 @@ class InputStreamReaderTest extends FunSuite {
     val r = new InputStreamReader(s, 100)
 
     val f1 = r.read(1000)
-    assert(Await.result(f1) == Some(buf(0,100)))
+    assert(Await.result(f1, 5.seconds) == Some(buf(0,100)))
 
     val f2 = r.read(1000)
-    assert(Await.result(f2) == Some(buf(100,200)))
+    assert(Await.result(f2, 5.seconds) == Some(buf(100,200)))
 
     val f3 = r.read(1000)
-    assert(Await.result(f3) == Some(buf(200,250)))
+    assert(Await.result(f3, 5.seconds) == Some(buf(200,250)))
 
     val f4 = r.read(1000)
-    assert(Await.result(f4).isEmpty)
+    assert(Await.result(f4, 5.seconds).isEmpty)
   }
 
   test("InputStreamReader - Reader.readAll") {
@@ -75,16 +75,16 @@ class InputStreamReaderTest extends FunSuite {
     val r2 = new InputStreamReader(s2, 500)
 
     val f1 = Reader.readAll(r1)
-    assert(Await.result(f1) == buf(0,250))
+    assert(Await.result(f1, 5.seconds) == buf(0,250))
 
     val f2 = Reader.readAll(r1)
-    assert(Await.result(f2).isEmpty)
+    assert(Await.result(f2, 5.seconds).isEmpty)
 
     val f3 = Reader.readAll(r2)
-    assert(Await.result(f3) == buf(0,250))
+    assert(Await.result(f3, 5.seconds) == buf(0,250))
 
     val f4 = Reader.readAll(r2)
-    assert(Await.result(f4).isEmpty)
+    assert(Await.result(f4, 5.seconds).isEmpty)
   }
 
   test("InputStreamReader - discard") {
@@ -93,11 +93,36 @@ class InputStreamReaderTest extends FunSuite {
     val r = new InputStreamReader(s, 4096)
 
     val f1 = r.read(10)
-    assert(Await.result(f1) == Some(buf(0,10)))
+    assert(Await.result(f1, 5.seconds) == Some(buf(0,10)))
 
     r.discard()
 
     val f2 = r.read(10)
-    intercept[Reader.ReaderDiscarded] { Await.result(f2) }
+    intercept[Reader.ReaderDiscarded] { Await.result(f2, 5.seconds) }
   }
+
+  test("discard closes InputStream") {
+    val in = spy(new ByteArrayInputStream(arr(0, 10)))
+    val reader = new InputStreamReader(in, 100, FuturePool.immediatePool)
+
+    reader.discard()
+    verify(in, times(1)).close()
+  }
+
+  test("close closes InputStream") {
+    val in = spy(new ByteArrayInputStream(arr(0, 10)))
+    val reader = new InputStreamReader(in, 100, FuturePool.immediatePool)
+
+    reader.close()
+    verify(in, times(1)).close()
+  }
+
+  test("reading EOF closes the InputStream") {
+    val in = spy(new ByteArrayInputStream(arr(0, 10)))
+    val reader = new InputStreamReader(in, 100, FuturePool.immediatePool)
+    val f = Reader.readAll(reader)
+    assert(Await.result(f, 5.seconds) == buf(0, 10))
+    verify(in, times(1)).close()
+  }
+
 }
